14_08K8sEjemploFinalIngress1.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ejemplo-final-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: kube-devnation.info
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: quarkus-demo-deployment
            port:
              number: 8080
        # Añadir un nuevo PATH para el deployment 2
