14_08K8sEjemploFinalIngress2.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ejemplo-final-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: kube-devnation.info
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          serviceName: quarkus-demo-deployment
          servicePort: 8080
      - path: /v2
        pathType: Prefix
        backend:
          serviceName: mynode-deployment
          servicePort: 8000
