15_01WordPressIngress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wordpress-alisal-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: wp.iesalisal.es
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: wordpress-ies-alisal
            port:
              number: 80
